--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "joi-manager",
   "version": "1.0.0-alpha.1",
-  "description": "Manage Joi schemes with joy.",
+  "description": "Manage Joi schemas with joy.",
   "author": "Vlad Zhukov (http://github.com/Vlad-Zhukov)",
   "license": "MIT",
   "repository": {
