--- a/package.json
+++ b/package.json
@@ -10,36 +10,32 @@
   },
   "main": "./dist/joi-manager.cjs.js",
   "module": "./dist/joi-manager.es.js",
-  "jsnext:main": "./dist/joi-manager.es.js",
   "scripts": {
-    "build": "rollup -c",
+    "build": "rimraf dist/ && rollup -c",
     "test": "jest",
-    "lint": "eslint **/*.js",
-    "prettier": "prettier-eslint --write **/*.js",
-    "prepublish": "yarn run build"
+    "lint": "eslint \"**/*.js\"",
+    "prettier": "prettier-eslint \"**/*.js\" --write ",
+    "prepublishOnly": "yarn run build"
   },
-  "dependencies": {},
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.4.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-stage-0": "^6.24.1",
     "bluebird": "^3.5.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0",
-    "jest": "^20.0.1",
-    "joi": "^10.4.2",
-    "prettier-eslint-cli": "^3.4.3",
-    "rollup": "^0.41.6",
-    "rollup-plugin-babel": "^2.7.1"
+    "eslint": "^4.6.1",
+    "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "jest": "^21.0.2",
+    "joi": "^10.6.0",
+    "prettier-eslint-cli": "4.3.0",
+    "rimraf": "^2.6.1",
+    "rollup": "0.48.2",
+    "rollup-plugin-babel": "^3.0.2"
   },
   "peerDependencies": {
     "bluebird": "^3",
     "joi": "^10"
-  },
-  "engines": {
-    "node": ">= 6"
   },
   "keywords": [
     "joi",
